<resources>
    <string name="app_name">Task14</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="surname">Surname</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="signIn">sign in</string>
    <string name="signUp">sign up</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>