<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/teal_700"
    tools:context=".LoginFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="10sp">
        <TextView
            android:id="@+id/tvLogin"
            android:layout_width="100sp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/login"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />
        <EditText
            android:id="@+id/etLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:hint=""/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="60sp">
        <TextView
            android:id="@+id/tvPassword"
            android:layout_width="100sp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/password"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />
        <EditText
            android:id="@+id/etPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:textColor="@color/black"
            android:textSize="20sp" />
    </LinearLayout>

    <Button
        android:id="@+id/btnSignIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/signIn"
        android:backgroundTint="@color/black"/>
    <Button
        android:id="@+id/btnSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="100dp"
        android:text="@string/signUp"
        android:backgroundTint="@color/black"/>

</FrameLayout>