<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_200"
    tools:context=".RegistrationFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="10dp">
        <TextView
            android:id="@+id/tvLogin"
            android:layout_width="100sp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/login"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />
        <EditText
            android:id="@+id/etLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:textColor="@color/black"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="60sp">
        <TextView
            android:id="@+id/tvSurname"
            android:layout_width="100sp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/surname"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />
        <EditText
            android:id="@+id/etSurname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:textColor="@color/black"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="110sp">
        <TextView
            android:id="@+id/tvName"
            android:layout_width="100sp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/name"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />
        <EditText
            android:id="@+id/etName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:textColor="@color/black"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="160sp">
        <TextView
            android:id="@+id/tvEmail"
            android:layout_width="100sp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/email"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />
        <EditText
            android:id="@+id/etEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:textColor="@color/black"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="210sp">
        <TextView
            android:id="@+id/tvPassword"
            android:layout_width="100sp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/password"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />
        <EditText
            android:id="@+id/etPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:textColor="@color/black"
            android:textSize="20sp" />
    </LinearLayout>

    <Button
        android:id="@+id/btnSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/signUp"
        android:backgroundTint="@color/black"/>

</FrameLayout>